[package]
name = "klotski_okehazama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.22", features = [] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"]}
ggez = "0.9.3"
hecs = "0.10.5"
glam = { version = "0.24", features = ["mint"] }
regex = "1.11.1"
lazy_static = "1.4"
itertools = "0.13.0"